# DS-SequenceAlignment

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  single.ipynb
.history/src/: master_20231201222701.cpp  master_20231202100242.cpp  master_20231202100627.cpp  master_20231202100656.cpp  master_20231202100702.cpp  master_20231202100726.cpp  master_20231202100739.cpp  master_20231202100746.cpp  master_20231202100757.cpp  master_20231202100807.cpp  master_20231202100811.cpp  master_20231202100816.cpp  master_20231202100844.cpp  master_20231202100846.cpp  master_20231202100847.cpp  master_20231202100852.cpp  master_20231202100854.cpp  master_20231202100910.cpp  master_20231202100916.cpp  master_20231202101026.cpp  master_20231202101033.cpp  master_20231202101039.cpp  master_20231202101042.cpp  master_20231202101044.cpp  master_20231202101046.cpp  master_20231202101051.cpp  master_20231202101055.cpp  master_20231202101059.cpp  master_20231202101104.cpp  master_20231202125748.cpp  master_20231202125930.cpp  master_20231202125932.cpp  master_20231202125936.cpp  master_20231202130334.cpp  master_20231202130342.cpp  master_20231202130344.cpp  master_20231202130346.cpp  master_20231202130351.cpp  master_20231202130354.cpp  master_20231202130356.cpp  (+44 more)
include/: fasta_reader.h
include/controller/: abstract_controller.h  backup_master_controller.h  master_controller.h  slave_controller.h
include/model/: AbstractJsonObject.h  IdentificationInfo.hpp
include/service/: abstract_service.h  backup_master_service.h  master_service.h  slave_service.h
include/util/: util.h
src/: bmaster.cpp  master.cpp  readfile.cpp  slave.cpp
src/controller/: backup_master_controller.cpp  master_controller.cpp  slave_controller.cpp
src/service/: abstract_service.cpp  backup_master_service.cpp  master_service.cpp  (+1 more)
(+34 files in other folders)
